# crawler

./: .gitignore  Cargo.toml
migrations/: 20251222074752_init.down.sql  20251222074752_init.up.sql
src/: check_robots.rs  cli.rs  commands.rs  extract_links.rs  extract_metadata.rs  fetch.rs  main.rs  printer.rs  traits.rs  utils.rs
src/crawlers/: mod.rs  sqlite.rs  stdout.rs
src/models/: crawl_sessions.rs  domains.rs  links.rs  mod.rs  pages.rs  prelude.rs  url_queue.rs
test-site/: index.html  robots.txt  sitemap.xml
test-site/pages/: forms.html  images.html  links-test.html  metadata.html  relative-urls.html  simple-content.html  special-chars.html
